[gd_scene load_steps=63 format=3 uid="uid://jcp3c0jwvgpw"]

[ext_resource type="Script" path="res://scripts/enemies/shrubtooth.gd" id="1_enlxu"]
[ext_resource type="Shader" path="res://shader/flashShader.gdshader" id="2_mpeiw"]
[ext_resource type="Texture2D" uid="uid://dlwu7fb0atuil" path="res://assets/sprites/shrubtooth_blue.png" id="3_6o5sb"]
[ext_resource type="Texture2D" uid="uid://dtaw7mc4kovwl" path="res://assets/sprites/grub_large_A.png" id="3_pak22"]
[ext_resource type="Texture2D" uid="uid://be81s6rmjein1" path="res://assets/sprites/grub_large_B.png" id="4_wycbu"]
[ext_resource type="PackedScene" uid="uid://53kn0wf4gsk3" path="res://scenes/killzone.tscn" id="5_63mgj"]
[ext_resource type="PackedScene" uid="uid://c31mvjap8amod" path="res://scenes/enemies/damageable.tscn" id="6_tv4wi"]
[ext_resource type="Texture2D" uid="uid://dpmc3tm70cchh" path="res://assets/sprites/security_robot_ray.png" id="8_0wics"]
[ext_resource type="PackedScene" uid="uid://cl88owhcrejwd" path="res://scenes/killzoneRay.tscn" id="9_flq0c"]
[ext_resource type="Script" path="res://scripts/enemies/Alert_zone.gd" id="10_jh7hp"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_14unv"]
resource_local_to_scene = true
shader = ExtResource("2_mpeiw")
shader_parameter/active = false

[sub_resource type="AtlasTexture" id="AtlasTexture_nuhxb"]
atlas = ExtResource("3_6o5sb")
region = Rect2(0, 192, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5qx15"]
atlas = ExtResource("3_6o5sb")
region = Rect2(52, 192, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ioid"]
atlas = ExtResource("3_6o5sb")
region = Rect2(104, 192, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_81xs3"]
atlas = ExtResource("3_6o5sb")
region = Rect2(156, 192, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7rqg"]
atlas = ExtResource("3_6o5sb")
region = Rect2(208, 192, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mepki"]
atlas = ExtResource("3_6o5sb")
region = Rect2(260, 192, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xp66g"]
atlas = ExtResource("3_6o5sb")
region = Rect2(104, 48, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gv4yt"]
atlas = ExtResource("3_6o5sb")
region = Rect2(312, 48, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sajgb"]
atlas = ExtResource("3_6o5sb")
region = Rect2(364, 48, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4k0yd"]
atlas = ExtResource("3_6o5sb")
region = Rect2(468, 48, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5m5ku"]
atlas = ExtResource("3_6o5sb")
region = Rect2(0, 192, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bp3cc"]
atlas = ExtResource("3_6o5sb")
region = Rect2(52, 192, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpfm7"]
atlas = ExtResource("3_6o5sb")
region = Rect2(104, 192, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jjokd"]
atlas = ExtResource("3_6o5sb")
region = Rect2(156, 192, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gyip"]
atlas = ExtResource("3_6o5sb")
region = Rect2(208, 192, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3itvv"]
atlas = ExtResource("3_6o5sb")
region = Rect2(260, 192, 52, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ilf3d"]
atlas = ExtResource("3_pak22")
region = Rect2(0, 24, 52, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6een"]
atlas = ExtResource("3_pak22")
region = Rect2(52, 24, 52, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_eovru"]
atlas = ExtResource("3_pak22")
region = Rect2(104, 24, 52, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xvsui"]
atlas = ExtResource("3_pak22")
region = Rect2(156, 24, 52, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3a5e"]
atlas = ExtResource("3_pak22")
region = Rect2(208, 24, 52, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_yqrs3"]
atlas = ExtResource("3_pak22")
region = Rect2(260, 24, 52, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gcq8k"]
atlas = ExtResource("3_pak22")
region = Rect2(312, 24, 52, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8lhxv"]
atlas = ExtResource("3_pak22")
region = Rect2(364, 24, 52, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_svl1h"]
atlas = ExtResource("3_pak22")
region = Rect2(416, 24, 52, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_75ecv"]
atlas = ExtResource("3_pak22")
region = Rect2(468, 24, 52, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_usqyd"]
atlas = ExtResource("3_pak22")
region = Rect2(520, 24, 52, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_32tqh"]
atlas = ExtResource("3_pak22")
region = Rect2(572, 24, 52, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_1d2hw"]
atlas = ExtResource("4_wycbu")
region = Rect2(0, 24, 52, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_it0ux"]
atlas = ExtResource("4_wycbu")
region = Rect2(52, 24, 52, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7yuo"]
atlas = ExtResource("4_wycbu")
region = Rect2(104, 24, 52, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3u43u"]
atlas = ExtResource("4_wycbu")
region = Rect2(156, 24, 52, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtice"]
atlas = ExtResource("4_wycbu")
region = Rect2(208, 24, 52, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_1htrg"]
atlas = ExtResource("4_wycbu")
region = Rect2(260, 24, 52, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_geuyj"]
atlas = ExtResource("4_wycbu")
region = Rect2(312, 24, 52, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_snmj5"]
atlas = ExtResource("4_wycbu")
region = Rect2(364, 24, 52, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qdo1"]
atlas = ExtResource("4_wycbu")
region = Rect2(416, 24, 52, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrkix"]
atlas = ExtResource("4_wycbu")
region = Rect2(468, 24, 52, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ac5e5"]
atlas = ExtResource("4_wycbu")
region = Rect2(520, 24, 52, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfx28"]
atlas = ExtResource("4_wycbu")
region = Rect2(572, 24, 52, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_6q03n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nuhxb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qx15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ioid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_81xs3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7rqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mepki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xp66g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gv4yt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sajgb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4k0yd")
}],
"loop": true,
"name": &"Shrubtooth_enraged",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5m5ku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bp3cc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpfm7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jjokd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gyip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3itvv")
}],
"loop": true,
"name": &"Shrubtooth_walk",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilf3d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6een")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eovru")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvsui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3a5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqrs3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gcq8k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8lhxv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svl1h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75ecv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_usqyd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32tqh")
}],
"loop": false,
"name": &"grub_large_A_walk",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1d2hw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_it0ux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7yuo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3u43u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtice")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1htrg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_geuyj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_snmj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qdo1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrkix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ac5e5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfx28")
}],
"loop": true,
"name": &"grub_large_B",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_f7wuv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:material:shader_parameter/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_b74g1"]
resource_name = "flash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_altsj"]
resource_name = "grub_large_A_walk"
length = 1.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 1, 1, 4, 5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5ouvp"]
_data = {
"RESET": SubResource("Animation_f7wuv"),
"flash": SubResource("Animation_b74g1"),
"grub_large_A_walk": SubResource("Animation_altsj")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yad8q"]
size = Vector2(16, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_utoyj"]
size = Vector2(16, 18)

[sub_resource type="Animation" id="Animation_mbxgy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ikm1q"]
resource_name = "flash"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rvweh"]
_data = {
"RESET": SubResource("Animation_mbxgy"),
"flash": SubResource("Animation_ikm1q")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p55l4"]
size = Vector2(69, 13.5)

[node name="shrubtooth" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_enlxu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_14unv")
scale = Vector2(0.548194, 0.63536)
sprite_frames = SubResource("SpriteFrames_6q03n")
animation = &"Shrubtooth_enraged"
autoplay = "Shrubtooth_walk"
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_5ouvp")
}
autoplay = "grub_large_A_walk"

[node name="killzone" parent="." instance=ExtResource("5_63mgj")]

[node name="killShape" type="CollisionShape2D" parent="killzone"]
shape = SubResource("RectangleShape2D_yad8q")

[node name="RaycastRight" type="RayCast2D" parent="."]
position = Vector2(8, 0)
target_position = Vector2(8, 0)

[node name="RaycastLeft" type="RayCast2D" parent="."]
position = Vector2(-7, 0)
target_position = Vector2(-9, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_utoyj")

[node name="Damageable" parent="." instance=ExtResource("6_tv4wi")]

[node name="RaycastDownRight" type="RayCast2D" parent="."]
position = Vector2(11, 0)
exclude_parent = false
target_position = Vector2(0, 16)

[node name="RaycastDownLeft" type="RayCast2D" parent="."]
position = Vector2(-13, 0)
exclude_parent = false
target_position = Vector2(0, 16)

[node name="Flash" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite2D")
libraries = {
"": SubResource("AnimationLibrary_rvweh")
}

[node name="ray" type="Sprite2D" parent="."]
position = Vector2(55, 1)
texture = ExtResource("8_0wics")

[node name="alertZone" parent="." instance=ExtResource("9_flq0c")]
script = ExtResource("10_jh7hp")

[node name="RayCollision" type="CollisionShape2D" parent="alertZone"]
position = Vector2(44, 0.75)
shape = SubResource("RectangleShape2D_p55l4")

[connection signal="body_entered" from="alertZone" to="." method="_on_alert_zone_body_entered"]
